--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,17 @@
 <string name="own_weight">Own Weight</string>
 <string name="add_set">Add Set</string>
 <string name="delete_set">Delete Set</string>
-<string name="add_remove_excercises">Add/Remove Excercises</string>
+<string name="delete_exercise">Delete Exercise</string>
+<string name="edit_exercise">Edit Exercise</string>
+<string name="edit_group">Edit Group</string>
+<string name="exercise_deleted">Exercise Deleted</string>
+<string name="group_deleted">Group Deleted</string>
+<string name="exercise_edited">Exercise Edited</string>
+<string name="group_edited">Group Edited</string>
+<string name="edit_set">Edit Set</string>
+<string name="set_edited">Set Edited</string>
+<string name="add_remove_excercises">Add/Remove Exercises</string>
+<string name="add_exercise_to_set">Add Exercise To Set</string>
+<string name="remove_from_set">Remove From Set</string>
+<string name="exercise_removed_from_set">Exercise removed from set</string>
 </resources>
