--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,4 +76,11 @@
 <string name="program_edited">Program edited</string>
 <string name="edit_program">Edit program</string>
 <string name="plan_added">Plan added</string>
+<string name="add_session">Add session</string>
+<string name="add_exercise_to_session">Add Exercise to session</string>
+<string name="remove_from_session">Remove from session</string>
+<string name="exercise_removed_from_session">Exercise removed from session</string>
+<string name="session_edited">Session Edited</string>
+<string name="edit_session">Edit Session</string>
+<string name="delete_session">Delete Session</string>
 </resources>
