--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -87,5 +87,6 @@
 <string name="edit_session_reps_entry">Edit Session Reps Entry</string>
 <string name="delete_session_reps_entry">Delete Session Reps Entry</string>
 <string name="start_session">Start Session</string>
+<string name="cancel">Cancel</string>
 
 </resources>
