--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
 <string name="sessions">Sessions</string>
 <string name="sets">Sets</string>
 <string name="programs">Programs</string>
+<string name="exercises">Exercises</string>
 <string name="excercise_log">Excercise Log</string>
 <string name="download_programs">Download Programs</string>
 <string name="download_excercises">Download Excercises</string>
@@ -21,6 +22,8 @@
 <string name="description">Description</string>
 <string name="group">Group</string>
 <string name="save">Save</string>
+<string name="max_reps">Max Reps</string>
+<string name="max_weight">Max Weight</string>
 <string name="add_group">Add Group</string>
 <string name="add_excercise">Add Excercise</string>
 <string name="select_set">Select Set</string>
@@ -88,5 +91,12 @@
 <string name="delete_session_reps_entry">Delete Session Reps Entry</string>
 <string name="start_session">Start Session</string>
 <string name="cancel">Cancel</string>
+<string name="mon">Mon</string>
+<string name="tue">Tue</string>
+<string name="wed">Wed</string>
+<string name="thu">Thu</string>
+<string name="fri">Fri</string>
+<string name="sat">Sat</string>
+<string name="sun">Sun</string>
 
 </resources>
