--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -120,6 +120,8 @@
 <string name="import_exercises">Import exercises</string>
 <string name="importing_exercises">Importing exercises</string>
 <string name="exercises_imported">Exercises imported</string>
+<string name="importing_programs">Importing programs</string>
+<string name="programs_imported">Programs imported</string>
 
 <dimen name="numeric_width">100dip</dimen>
 </resources>
