Statistics selector screen now uses list for defining parameters, fixed crash with returning without selecting exercise, added chack if exercise already added to workout or session

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -153,7 +153,7 @@
 <string name="planned_weight_table">pl. weight</string>
 <string name="weight_table">weight</string>
 <string name="percentage_table">percentage</string>
-
+<string name="none_selected">None selected</string>
 
 <dimen name="numeric_width">100dip</dimen>
 <color name="tables_header">#0000ff</color>
