--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -118,6 +118,8 @@
 <string name="in_progress">In Progress</string>
 <string name="set_inprogress">Mark as \"In Progress\"</string>
 <string name="set_done">Mark as \"Done\"</string>
+<string name="tab_inprogress">In Progress</string>
+<string name="tab_done">Done</string>
 <string name="exercising">Exercising</string>
 <string name="fitmaestro">Fitmaestro.com</string>
 <string name="fetching">Please wait, fetching...</string>
@@ -184,6 +186,7 @@
 <string name="default_step">0.5</string>
 <string name="details">Details</string>
 <string name="add_exercise">Add exercise</string>
+<string name="add">Add</string>
 
 <dimen name="numeric_width">100dip</dimen>
 <color name="tables_header">#0000ff</color>
